Updated deprecated methods and tests (#265)